--- a/frogweb/frogweb.html
+++ b/frogweb/frogweb.html
@@ -6,7 +6,7 @@
     table {
         width: 80%;
 		min-width: 320px;
-        height: 80%;
+        height: 75%;
         min-height: 224px;
         padding: 0 0 0 0;
         margin: 0 0 0 0;
@@ -15,9 +15,9 @@
         background-repeat: no-repeat;
     }
     tr {
-        width: 80%;
+        // width: 72%;
         min-width: 320px;
-        height: 108%;
+        height: 27pt;
         min-height: 27px;
         padding: 0 0 0 0;
         margin: 0 0 0 0;
@@ -28,9 +28,9 @@
         background-size: 100% 100%;
     }
     td {
-        width: 8%;
-        min-width: 32px;
-        height: 10%;
+        // width: 7%;
+        min-width: 36px;
+        height: 27pt;
         min-height: 27px;
         padding: 0 0 0 0;
         margin: 0 0 0 0;
@@ -41,9 +41,9 @@
         background-size: 100% 100%;
     }
     img {
-        width: 100%;
-		min-width: 32px;
-        height: 100%;
+        width: 36pt;
+		min-width: 36px;
+        height: 27pt;
         min-height: 27px;
         padding: 0 0 0 0;
         margin: 0 0 0 0;
@@ -54,7 +54,7 @@
         background-size: 100% 100%;
     }
     #frog0 {
-        min-width: 32px;
+        min-width: 36px;
         min-height: 27px;
         padding: 0 0 0 0;
         margin: 0 0 0 0;
@@ -409,113 +409,116 @@
 </head>
 
 <body onload="frogInit()">
-		<table border="0" cellpadding="0" cellpadding="0">
-			<tr id="tr7">
-				<td width="8%" background="img/swamp0t.png" 	id="td7a"></td>
-				<td width="8%" background="img/swamp0t.png" 	id="td7b"></td>
-				<td width="8%" background="img/frogend0t.png" id="td7c"><img src="img/frogend0t.png" border="0" id="whole0" /></td>
-				<td width="8%" background="img/swamp0t.png" 	id="td7d"></td>
-				<td width="8%" background="img/swamp0t.png" id="td7e"><img src="img/arrow_up.png" border="0" id="aLeft" onclick="frogUP()" /></td>
-				<td width="8%" background="img/swamp0t.png" 	id="td7f"></td>
-				<td width="8%" background="img/frogend0t.png" 	id="td7g"><img src="img/frogend0t.png" border="0" id="whole1" /></td>
-				<td width="8%" background="img/swamp0t.png" 	id="td7h"</td>
-				<td width="8%" background="img/swamp0t.png" 	id="td7i"></td>
-				<td width="8%" background="img/swamp0t.png" 	id="td7j"></td>
-			</tr>		
-			<tr id="tr6">
-				<td width="8%" background="img/water0t.png" id="td6a"></td>
-				<td width="8%" background="img/water0t.png" id="td6b"></td>
-				<td width="8%" background="img/water1t.png" id="td6c"><img src="img/wood0t.png" border="0" 	id="woodT0"  /></td>
-				<td width="8%" background="img/water0t.png" id="td6d"><img src="img/wood0t.png" border="0"	id="woodT1"  /></td>
-				<td width="8%" background="img/water2t.png" id="td6e"></td>
-				<td width="8%" background="img/water0t.png" id="td6f"></td>
-				<td width="8%" background="img/water0t.png" id="td6g"></td>
-				<td width="8%" background="img/water0t.png" id="td6h"><img src="img/wood0t.png" border="0" 	id="woodU0"  /></td>
-				<td width="8%" background="img/water3t.png" id="td6i"><img src="img/wood0t.png" border="0" 	id="woodU1"  /></td>
-				<td width="8%" background="img/water0t.png" id="td6j"></td>
-			</tr>			
-			<tr id="tr5">
-				<td width="8%" background="img/water0b.png" id="td5a"></td>
-				<td width="8%" background="img/water0b.png" id="td5b"><img src="img/wood0b.png" border="0"  id="woodB0"  /></td>
-				<td width="8%" background="img/water3b.png" id="td5c"><img src="img/wood0b.png" border="0" 	id="woodB1"  /></td>
-				<td width="8%" background="img/water0b.png" id="td5d"></td>
-				<td width="8%" background="img/water0b.png" id="td5e"></td>
-				<td width="8%" background="img/water0b.png" id="td5f"></td>
-				<td width="8%" background="img/water0b.png" id="td5g"><img src="img/wood0b.png" border="0"	id="woodD0"   /></td>
-				<td width="8%" background="img/water0b.png" id="td5h"><img src="img/wood0b.png" border="0" 	id="woodD1" /></td>
-				<td width="8%" background="img/water0b.png" id="td5i"></td>
-				<td width="8%" background="img/water0b.png" id="td5j"></td>
-			</tr>					
-			<tr id="tr4">
-				<td width="8%" background="img/street0m.png" id="td4a"></td>
-				<td width="8%" background="img/street0m.png" id="td4b"><img src="img/djinn.png" border="0"  id="person0" /></td>
-				<td width="8%" background="img/street0m.png" id="td4c"></td>
-				<td width="8%" background="img/street0m.png" id="td4d"><img src="img/street5m.png" border="0"  id="person1"  /></td>
-				<td width="8%" background="img/street0m.png" id="td4e"></td>
-				<td width="8%" background="img/street0m.png" id="td4f"></td>
-				<td width="8%" background="img/street0m.png" id="td4g"><img src="img/street6m.png" border="0"  id="person2"  /></td>
-				<td width="8%" background="img/street0m.png" id="td4h"></td>
-				<td width="8%" background="img/street0m.png" id="td4i"><img src="img/dragon.png" border="0"  id="person3"  /></td>
-				<td width="8%" background="img/street0m.png" id="td4j"></td>
-			</tr>
-			<tr id="tr3">
-				<td width="8%" background="img/meadow0m.png" id="td3a"><img src="img/arrow_left.png" border="0" id="aLeft" onclick="frogLEFT()" /><</td>
-				<td width="8%" background="img/meadow0m.png" id="td3b"></td>
-				<td width="8%" background="img/meadow0m.png" id="td3c"></td>
-				<td width="8%" background="img/meadow0m.png" id="td3d"></td>
-				<td width="8%" background="img/meadow0m.png" id="td3e"></td>
-				<td width="8%" background="img/meadow0m.png" id="td3f"></td>
-				<td width="8%" background="img/meadow0m.png" id="td3g"></td>
-				<td width="8%" background="img/meadow0m.png" id="td3h"></td>
-				<td width="8%" background="img/meadow0m.png" id="td3i"></td>
-				<td width="8%" background="img/meadow0m.png" id="td3j"><img src="img/arrow_right.png" border="0" id="aRight" onclick="frogRIGHT()" /></td>
-			</tr>		
-			<tr id="tr2">
-				<td width="8%" background="img/street1t.png" id="td2a"><img src="img/car1.png" border="0" id="carA1" /></td>
-				<td width="8%" background="img/street1t.png" id="td2b"></td>
-				<td width="8%" background="img/street1t.png" id="td2c"></td>
-				<td width="8%" background="img/street1t.png" id="td2d"></td>
-				<td width="8%" background="img/street1t.png" id="td2e"><img src="img/car1.png" border="0"  id="carB1" /></td>
-				<td width="8%" background="img/street1t.png" id="td2f"></td>
-				<td width="8%" background="img/street1t.png" id="td2g"></td>
-				<td width="8%" background="img/street1t.png" id="td2h"></td>
-				<td width="8%" background="img/street1t.png" id="td2i"><img src="img/car1.png" border="0" id="carC1" /></td>
-				<td width="8%" background="img/street1t.png" id="td2j"></td>
-			</tr>			
-			<tr id="tr1">
-				<td width="8%" background="img/street1b.png" id="td1a"><img src="img/car0.png" border="0" id="carA0" /></td>
-				<td width="8%" background="img/street1b.png" id="td1b"></td>
-				<td width="8%" background="img/street1b.png" id="td1c"></td>
-				<td width="8%" background="img/street1b.png" id="td1d"></td>
-				<td width="8%" background="img/street1b.png" id="td1e"></td>
-				<td width="8%" background="img/street1b.png" id="td1f"></td>
-				<td width="8%" background="img/street1b.png" id="td1g"></td>
-				<td width="8%" background="img/street1b.png" id="td1h"><img src="img/car0.png" border="0" id="carB0" /></td>
-				<td width="8%" background="img/street1b.png" id="td1i"></td>
-				<td width="8%" background="img/street1b.png" id="td1j"></td>
-			</tr>
-			<tr id="tr0">
-				<td width="8%" background="img/meadow4b.png" id="td0a"></td>
-				<td width="8%" background="img/meadow5b.png" id="td0b"</td>
-				<td width="8%" background="img/meadow5b.png" id="td0c"></td>
-				<td width="8%" background="img/meadow5b.png" id="td0d"><img src="img/frogactive.png" border="0" id="frog0" title="ActiveFrog" alt="td0d" /></td>
-				<td width="8%" background="img/meadow5b.png" id="td0e"><img src="img/froga.png" border="0" id="frog1" alt="td0e" /></td>
-				<td width="8%" background="img/meadow5b.png" id="td0f"><img src="img/arrow_down.png" border="0" id="aLeft" onclick="frogDOWN()" /><</td>
-				<td width="8%" background="img/meadow5b.png" id="td0g"><img src="img/froga.png" border="0" id="frog2" alt="td0g" /></td>
-				<td width="8%" background="img/meadow5b.png" id="td0h"></td>
-				<td width="8%" background="img/meadow5b.png" id="td0i">/td>
-				<td width="8%" background="img/meadow4b.png" id="td0j"></td>
-			</tr>				
-		</table>
-        <hr />
-		<div align="left" style="text-align: left; width: 100%; height: 8%; background-color='#bfbfbf'; font-size: large; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
-			<button ID="ButtonLeft" Text=""←"" OnClick="frogLEFT()" title="left"><=</button>
-			<button ID="ButtonUp" Text="↑" OnClick="frogUP()" title="Up">^</button>
-			<button ID="ButtonDown" Text="↓" OnClick="frogDOWN()" title="Down">V</button>
-			<button ID="ButtonRight" Text="→" OnClick="frogRIGHT()" title="Right">=></button>
-			<a href="mailto:root@darkstar.work">Heinrich Elsigan</a>, GNU General Public License 2.0, [<a href="http://blog.darkstar.work">blog.</a>]<a href="https://@arkstar.work">darkstar.work</a>
-			<asp:Button ID="bHelp" runat="server" ToolTip="Help" Text="Help" OnClick="bHelp_Click" Enabled="false" Visible="false" />
-		</div>    
-    </form>
+	<table border="0" cellpadding="0" cellpadding="0">
+		<tr id="tr7">
+			<td width="8%" background="img/swamp0t.png" id="td7a"></td>
+			<td width="8%" background="img/swamp0t.png" id="td7b"></td>
+			<td width="8%" background="img/frogend0t.png" id="td7c"><img src="img/frogend0t.png" border="0" id="whole0" /></td>
+			<td width="8%" background="img/swamp0t.png" id="td7d"></td>
+			<td width="8%" background="img/swamp0t.png" id="td7e"><img src="img/arrow_up.png" border="0" id="aLeft" onclick="frogUP()" /></td>
+			<td width="8%" background="img/swamp0t.png" id="td7f"></td>
+			<td width="8%" background="img/frogend0t.png" id="td7g"><img src="img/frogend0t.png" border="0" id="whole1" /></td>
+			<td width="8%" background="img/swamp0t.png" id="td7h"</td>
+			<td width="8%" background="img/swamp0t.png" id="td7i"></td>
+			<td width="8%" background="img/swamp0t.png" id="td7j"></td>
+		</tr>
+		<tr id="tr6">
+			<td width="8%" background="img/water0t.png" id="td6a"></td>
+			<td width="8%" background="img/water0t.png" id="td6b"></td>
+			<td width="8%" background="img/water1t.png" id="td6c"><img src="img/wood0t.png" border="0" id="woodT0" /></td>
+			<td width="8%" background="img/water0t.png" id="td6d"><img src="img/wood0t.png" border="0" id="woodT1" /></td>
+			<td width="8%" background="img/water2t.png" id="td6e"></td>
+			<td width="8%" background="img/water0t.png" id="td6f"></td>
+			<td width="8%" background="img/water0t.png" id="td6g"></td>
+			<td width="8%" background="img/water0t.png" id="td6h"><img src="img/wood0t.png" border="0" id="woodU0" /></td>
+			<td width="8%" background="img/water3t.png" id="td6i"><img src="img/wood0t.png" border="0" id="woodU1" /></td>
+			<td width="8%" background="img/water0t.png" id="td6j"></td>
+		</tr>
+		<tr id="tr5">
+			<td width="8%" background="img/water0b.png" id="td5a"></td>
+			<td width="8%" background="img/water0b.png" id="td5b"><img src="img/wood0b.png" border="0" id="woodB0" /></td>
+			<td width="8%" background="img/water3b.png" id="td5c"><img src="img/wood0b.png" border="0" id="woodB1" /></td>
+			<td width="8%" background="img/water0b.png" id="td5d"></td>
+			<td width="8%" background="img/water0b.png" id="td5e"></td>
+			<td width="8%" background="img/water0b.png" id="td5f"></td>
+			<td width="8%" background="img/water0b.png" id="td5g"><img src="img/wood0b.png" border="0" id="woodD0" /></td>
+			<td width="8%" background="img/water0b.png" id="td5h"><img src="img/wood0b.png" border="0" id="woodD1" /></td>
+			<td width="8%" background="img/water0b.png" id="td5i"></td>
+			<td width="8%" background="img/water0b.png" id="td5j"></td>
+		</tr>
+		<tr id="tr4">
+			<td width="8%" background="img/street0m.png" id="td4a"></td>
+			<td width="8%" background="img/street0m.png" id="td4b"><img src="img/djinn.png" border="0" id="person0" /></td>
+			<td width="8%" background="img/street0m.png" id="td4c"></td>
+			<td width="8%" background="img/street0m.png" id="td4d"><img src="img/street5m.png" border="0" id="person1" /></td>
+			<td width="8%" background="img/street0m.png" id="td4e"></td>
+			<td width="8%" background="img/street0m.png" id="td4f"></td>
+			<td width="8%" background="img/street0m.png" id="td4g"><img src="img/street6m.png" border="0" id="person2" /></td>
+			<td width="8%" background="img/street0m.png" id="td4h"></td>
+			<td width="8%" background="img/street0m.png" id="td4i"><img src="img/dragon.png" border="0" id="person3" /></td>
+			<td width="8%" background="img/street0m.png" id="td4j"></td>
+		</tr>
+		<tr id="tr3">
+			<td width="8%" background="img/meadow0m.png" id="td3a"><img src="img/arrow_left.png" border="0" id="aLeft" onclick="frogLEFT()" /><</td>
+			<td width="8%" background="img/meadow0m.png" id="td3b"></td>
+			<td width="8%" background="img/meadow0m.png" id="td3c"></td>
+			<td width="8%" background="img/meadow0m.png" id="td3d"></td>
+			<td width="8%" background="img/meadow0m.png" id="td3e"></td>
+			<td width="8%" background="img/meadow0m.png" id="td3f"></td>
+			<td width="8%" background="img/meadow0m.png" id="td3g"></td>
+			<td width="8%" background="img/meadow0m.png" id="td3h"></td>
+			<td width="8%" background="img/meadow0m.png" id="td3i"></td>
+			<td width="8%" background="img/meadow0m.png" id="td3j"><img src="img/arrow_right.png" border="0" id="aRight" onclick="frogRIGHT()" /></td>
+		</tr>
+		<tr id="tr2">
+			<td width="8%" background="img/street1t.png" id="td2a">
+				<img src="img/car1.png" border="0" id="carA1" />
+			</td>
+			<td width="8%" background="img/street1t.png" id="td2b"></td>
+			<td width="8%" background="img/street1t.png" id="td2c"></td>
+			<td width="8%" background="img/street1t.png" id="td2d"></td>
+			<td width="8%" background="img/street1t.png" id="td2e">
+				<img src="img/car1.png" border="0" id="carB1" />
+			</td>
+			<td width="8%" background="img/street1t.png" id="td2f"></td>
+			<td width="8%" background="img/street1t.png" id="td2g"></td>
+			<td width="8%" background="img/street1t.png" id="td2h"></td>
+			<td width="8%" background="img/street1t.png" id="td2i">
+				<img src="img/car1.png" border="0" id="carC1" />
+			</td>
+			<td width="8%" background="img/street1t.png" id="td2j"></td>
+		</tr>
+		<tr id="tr1">
+			<td width="8%" background="img/street1b.png" id="td1a"><img src="img/car0.png" border="0" id="carA0" /></td>
+			<td width="8%" background="img/street1b.png" id="td1b"></td>
+			<td width="8%" background="img/street1b.png" id="td1c"></td>
+			<td width="8%" background="img/street1b.png" id="td1d"></td>
+			<td width="8%" background="img/street1b.png" id="td1e"></td>
+			<td width="8%" background="img/street1b.png" id="td1f"></td>
+			<td width="8%" background="img/street1b.png" id="td1g"></td>
+			<td width="8%" background="img/street1b.png" id="td1h"><img src="img/car0.png" border="0" id="carB0" /></td>
+			<td width="8%" background="img/street1b.png" id="td1i"></td>
+			<td width="8%" background="img/street1b.png" id="td1j"></td>
+		</tr>
+		<tr id="tr0">
+			<td width="8%" background="img/meadow4b.png" id="td0a"></td>
+			<td width="8%" background="img/meadow5b.png" id="td0b"</td>
+			<td width="8%" background="img/meadow5b.png" id="td0c"></td>
+			<td width="8%" background="img/meadow5b.png" id="td0d"><img src="img/frogactive.png" border="0" id="frog0" title="ActiveFrog" alt="td0d" /></td>
+			<td width="8%" background="img/meadow5b.png" id="td0e"><img src="img/froga.png" border="0" id="frog1" alt="td0e" /></td>
+			<td width="8%" background="img/meadow5b.png" id="td0f"><img src="img/arrow_down.png" border="0" id="aLeft" onclick="frogDOWN()" /><</td>
+			<td width="8%" background="img/meadow5b.png" id="td0g"><img src="img/froga.png" border="0" id="frog2" alt="td0g" /></td>
+			<td width="8%" background="img/meadow5b.png" id="td0h"></td>
+			<td width="8%" background="img/meadow5b.png" id="td0i">/td>
+			<td width="8%" background="img/meadow4b.png" id="td0j"></td>
+		</tr>
+	</table>
+	<!-- hr />
+	<div align="left" style="text-align: left; width: 100%; height: 8%; background-color='#bfbfbf'; font-size: large; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">
+		<button ID="ButtonLeft" Text=""←"" OnClick="frogLEFT()" title="left"><=</button>
+		<button ID="ButtonUp" Text="↑" OnClick="frogUP()" title="Up">^</button>
+		<button ID="ButtonDown" Text="↓" OnClick="frogDOWN()" title="Down">V</button>
+		<button ID="ButtonRight" Text="→" OnClick="frogRIGHT()" title="Right">=></button>
+	</div -->
 </body>
 </html>
