--- a/frogweb/index.html
+++ b/frogweb/index.html
@@ -20,7 +20,7 @@
 					</td>
 					<td class="frogaTD" width="10%" background="img/swamp0t.png" id="td9d"></td>
 					<td class="frogaTD" width="10%" background="img/swamp0t.png" id="td9e">
-						<img src="img/arrow_up.png" border="0" id="aLeft" onclick="frogUP()" />
+						<img src="img/arrow_up.png" border="0" id="aLeft" onclick="frogMove('up')" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/swamp0t.png" id="td9f"></td>
 					<td class="frogaTD" width="10%" background="img/frogend0t.png" id="td9g">
@@ -86,7 +86,7 @@
 				</tr>
 				<tr id="tr5" class="frogaTR">
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5a">
-						<img src="img/arrow_left.png" border="0" id="aLeft" onclick="frogLEFT()" />
+						<img src="img/arrow_left.png" border="0" id="aLeft" onclick="frogMove('left')" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5b"></td>
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5c"></td>
@@ -97,27 +97,27 @@
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5h"></td>
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5i"></td>
 					<td class="frogaTD" width="10%" background="img/meadow0t.png" id="td5j">
-						<img src="img/arrow_right.png" border="0" id="aRight" onclick="frogRIGHT()" />
+						<img src="img/arrow_right.png" border="0" id="aRight" onclick="frogMove('right')" />
 					</td>
 				</tr>
 				<tr id="tr4" class="frogaTR">
 					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4a"></td>
 					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4b">
-						<img src="img/street4m.png" border="0" id="person0" />
+						<img src="img/street4m.png" border="0" id="person0" alt="td4b" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4c"></td>
 					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4d">
-						<img src="img/street5m.png" border="0" id="person1" />
+						<img src="img/street5m.png" border="0" id="person1" alt="td4d" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4e"></td>
 					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4f"></td>
 					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4g">
-						<img src="img/street6m.png" border="0" id="person2" />
+						<img src="img/street6m.png" border="0" id="person2" alt="td4g" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4h"></td>
 					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4i"></td>
 					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4j">
-						<img src="img/street7m.png" border="0" id="person3" />
+						<img src="img/street7m.png" border="0" id="person3" alt="td4j" />
 					</td>
 				</tr>
 				<tr id="tr3" class="frogaTR">
@@ -134,26 +134,26 @@
 				</tr>
 				<tr id="tr2" class="frogaTR">
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2a">
-						<img src="img/car1.png" border="0" id="car10" />
+						<img src="img/car1.png" border="0" id="car10" alt="td2a" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2b"></td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2c"></td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2d"></td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2e">
-						<img src="img/car1.png" border="0" id="car11" />
+						<img src="img/car1.png" border="0" id="car11" alt="td2e" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2f"></td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2g"></td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2h"></td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2i">
-						<img src="img/car1.png" border="0" id="car12" />
+						<img src="img/car1.png" border="0" id="car12"  alt="td2i" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/street1t.png" id="td2j"></td>
 				</tr>
 				<tr id="tr1" class="frogaTR">
 					<td class="frogaTD" width="10%" background="img/street1b.png" id="td1a"></td>
 					<td class="frogaTD" width="10%" background="img/street1b.png" id="td1b">
-						<img src="img/car0.png" border="0" id="car00" />
+						<img src="img/car0.png" border="0" id="car00" alt="td1b" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/street1b.png" id="td1c"></td>
 					<td class="frogaTD" width="10%" background="img/street1b.png" id="td1d"></td>
@@ -161,7 +161,7 @@
 					<td class="frogaTD" width="10%" background="img/street1b.png" id="td1f"></td>
 					<td class="frogaTD" width="10%" background="img/street1b.png" id="td1g"></td>
 					<td class="frogaTD" width="10%" background="img/street1b.png" id="td1h">
-						<img src="img/car0.png" border="0" id="car01" />
+						<img src="img/car0.png" border="0" id="car01" alt="td1h" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/street1b.png" id="td1i"></td>
 					<td class="frogaTD" width="10%" background="img/street1b.png" id="td1j"></td>
@@ -179,7 +179,7 @@
 						<img id="frog1" class="frogaIMG" src="img/froga.png" alt="td0e" border="0" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/meadow5b.png" id="td0f">
-						<img id="aLeft" src="img/arrow_down.png" border="0" onclick="frogDOWN()" />
+						<img id="aLeft" src="img/arrow_down.png" border="0" onclick="frogMove('down')" />
 					</td>
 					<td class="frogaTD" width="10%" background="img/meadow5b.png" id="td0g">
 						<img id="frog2" class="frogaIMG" src="img/froga.png" alt="td0g" border="0" />
