--- a/frogweb/frogweb.html
+++ b/frogweb/frogweb.html
@@ -46,16 +46,16 @@
 			<td width="8%" background="img/water0b.png" id="td5j"></td>
 		</tr>
 		<tr id="tr4">
-			<td width="8%" background="img/street0m.png" id="td4a"></td>
-			<td width="8%" background="img/street0m.png" id="td4b"><img src="img/djinn.png" border="0" id="person0" /></td>
-			<td width="8%" background="img/street0m.png" id="td4c"></td>
-			<td width="8%" background="img/street0m.png" id="td4d"><img src="img/street5m.png" border="0" id="person1" /></td>
-			<td width="8%" background="img/street0m.png" id="td4e"></td>
-			<td width="8%" background="img/street0m.png" id="td4f"></td>
-			<td width="8%" background="img/street0m.png" id="td4g"><img src="img/street6m.png" border="0" id="person2" /></td>
-			<td width="8%" background="img/street0m.png" id="td4h"></td>
-			<td width="8%" background="img/street0m.png" id="td4i"><img src="img/dragon.png" border="0" id="person3" /></td>
-			<td width="8%" background="img/street0m.png" id="td4j"></td>
+			<td width="8%" background="img/walk0m.png" id="td4a"></td>
+			<td width="8%" background="img/walk0m.png" id="td4b"><img src="img/djinn.png" border="0" id="person0" /></td>
+			<td width="8%" background="img/walk0m.png" id="td4c"></td>
+			<td width="8%" background="img/walk0m.png" id="td4d"><img src="img/walk5m.png" border="0" id="person1" /></td>
+			<td width="8%" background="img/walk0m.png" id="td4e"></td>
+			<td width="8%" background="img/walk0m.png" id="td4f"></td>
+			<td width="8%" background="img/walk0m.png" id="td4g"><img src="img/walk6m.png" border="0" id="person2" /></td>
+			<td width="8%" background="img/walk0m.png" id="td4h"></td>
+			<td width="8%" background="img/walk0m.png" id="td4i"><img src="img/dragon.png" border="0" id="person3" /></td>
+			<td width="8%" background="img/walk0m.png" id="td4j"></td>
 		</tr>
 		<tr id="tr3">
 			<td width="8%" background="img/meadow0m.png" id="td3a"><img src="img/arrow_left.png" border="0" id="aLeft" onclick="frogLEFT()" /><</td>
@@ -100,16 +100,16 @@
 			<td width="8%" background="img/street1b.png" id="td1j"></td>
 		</tr>
 		<tr id="tr0">
-			<td width="8%" background="img/meadow4b.png" id="td0a"></td>
-			<td width="8%" background="img/meadow5b.png" id="td0b"</td>
-			<td width="8%" background="img/meadow5b.png" id="td0c"></td>
-			<td width="8%" background="img/meadow5b.png" id="td0d"><img src="img/frogactive.png" border="0" id="frog0" title="ActiveFrog" alt="td0d" /></td>
-			<td width="8%" background="img/meadow5b.png" id="td0e"><img src="img/froga.png" border="0" id="frog1" alt="td0e" /></td>
-			<td width="8%" background="img/meadow5b.png" id="td0f"><img src="img/arrow_down.png" border="0" id="aLeft" onclick="frogDOWN()" /><</td>
-			<td width="8%" background="img/meadow5b.png" id="td0g"><img src="img/froga.png" border="0" id="frog2" alt="td0g" /></td>
-			<td width="8%" background="img/meadow5b.png" id="td0h"></td>
-			<td width="8%" background="img/meadow5b.png" id="td0i">/td>
-			<td width="8%" background="img/meadow4b.png" id="td0j"></td>
+			<td width="8%" background="img/meadow0b.png" id="td0a"></td>
+			<td width="8%" background="img/meadow1b.png" id="td0b"</td>
+			<td width="8%" background="img/meadow1b.png" id="td0c"></td>
+			<td width="8%" background="img/meadow1b.png" id="td0d"><img src="img/frogactive.png" border="0" id="frog0" title="ActiveFrog" alt="td0d" /></td>
+			<td width="8%" background="img/meadow1b.png" id="td0e"><img src="img/froga.png" border="0" id="frog1" alt="td0e" /></td>
+			<td width="8%" background="img/meadow1b.png" id="td0f"><img src="img/arrow_down.png" border="0" id="aLeft" onclick="frogDOWN()" /><</td>
+			<td width="8%" background="img/meadow1b.png" id="td0g"><img src="img/froga.png" border="0" id="frog2" alt="td0g" /></td>
+			<td width="8%" background="img/meadow1b.png" id="td0h"></td>
+			<td width="8%" background="img/meadow1b.png" id="td0i">/td>
+			<td width="8%" background="img/meadow3b.png" id="td0j"></td>
 		</tr>
 	</table>
 	<!-- hr />
