--- a/frogweb/index.html
+++ b/frogweb/index.html
@@ -101,23 +101,23 @@
 					</td>
 				</tr>
 				<tr id="tr4" class="frogaTR">
-					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4a"></td>
-					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4b">
-						<img src="img/street4m.png" border="0" id="person0" alt="td4b" />
+					<td class="frogaTD" width="10%" background="img/walk1m.png" id="td4a"></td>
+					<td class="frogaTD" width="10%" background="img/walk1m.png" id="td4b">
+						<img src="img/walk4m.png" border="0" id="person0" alt="td4b" />
 					</td>
-					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4c"></td>
-					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4d">
-						<img src="img/street5m.png" border="0" id="person1" alt="td4d" />
+					<td class="frogaTD" width="10%" background="img/walk1m.png" id="td4c"></td>
+					<td class="frogaTD" width="10%" background="img/walk1m.png" id="td4d">
+						<img src="img/walk5m.png" border="0" id="person1" alt="td4d" />
 					</td>
-					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4e"></td>
-					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4f"></td>
-					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4g">
-						<img src="img/street6m.png" border="0" id="person2" alt="td4g" />
+					<td class="frogaTD" width="10%" background="img/walk1m.png" id="td4e"></td>
+					<td class="frogaTD" width="10%" background="img/walk1m.png" id="td4f"></td>
+					<td class="frogaTD" width="10%" background="img/walk1m.png" id="td4g">
+						<img src="img/walk6m.png" border="0" id="person2" alt="td4g" />
 					</td>
-					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4h"></td>
-					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4i"></td>
-					<td class="frogaTD" width="10%" background="img/street0m.png" id="td4j">
-						<img src="img/street7m.png" border="0" id="person3" alt="td4j" />
+					<td class="frogaTD" width="10%" background="img/walk1m.png" id="td4h"></td>
+					<td class="frogaTD" width="10%" background="img/walk1m.png" id="td4i"></td>
+					<td class="frogaTD" width="10%" background="img/walk1m.png" id="td4j">
+						<img src="img/walk7m.png" border="0" id="person3" alt="td4j" />
 					</td>
 				</tr>
 				<tr id="tr3" class="frogaTR">
@@ -167,26 +167,26 @@
 					<td class="frogaTD" width="10%" background="img/street1b.png" id="td1j"></td>
 				</tr>
 				<tr id="tr0" class="frogaTR">
-					<td class="frogaTD" width="10%" background="img/meadow4b.png" id="td0a">
+					<td class="frogaTD" width="10%" background="img/meadow0b.png" id="td0a">
 						<!-- img src="img/meadow4b.png" border="0" /-->
 					</td>
-					<td class="frogaTD" width="10%" background="img/meadow5b.png" id="td0b"></td>
-					<td class="frogaTD" width="10%" background="img/meadow5b.png" id="td0c"></td>
-					<td class="frogaTD" width="10%" background="img/meadow5b.png" id="td0d">
+					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0b"></td>
+					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0c"></td>
+					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0d">
 						<img id="frog0" class="frogaIMG" src="img/frogactive.png" alt="td0d" title="ActiveFrog" border="0" />
 					</td>
-					<td class="frogaTD" width="10%" background="img/meadow5b.png" id="td0e">
+					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0e">
 						<img id="frog1" class="frogaIMG" src="img/froga.png" alt="td0e" border="0" />
 					</td>
-					<td class="frogaTD" width="10%" background="img/meadow5b.png" id="td0f">
+					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0f">
 						<img id="aLeft" src="img/arrow_down.png" border="0" onclick="frogMove('down')" />
 					</td>
-					<td class="frogaTD" width="10%" background="img/meadow5b.png" id="td0g">
+					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0g">
 						<img id="frog2" class="frogaIMG" src="img/froga.png" alt="td0g" border="0" />
 					</td>
-					<td class="frogaTD" width="10%" background="img/meadow5b.png" id="td0h"></td>
-					<td class="frogaTD" width="10%" background="img/meadow5b.png" id="td0i"></td>
-					<td class="frogaTD" width="10%" background="img/meadow4b.png" id="td0j"></td>
+					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0h"></td>
+					<td class="frogaTD" width="10%" background="img/meadow1b.png" id="td0i"></td>
+					<td class="frogaTD" width="10%" background="img/meadow3b.png" id="td0j"></td>
 				</tr>
 			</table>
 		</div>
